--- a/pages/adiestradores.html
+++ b/pages/adiestradores.html
@@ -28,34 +28,277 @@
       Acá van los filtros
     </p>
     <div id="adiestradores">
-      <div class="linea">
-        <h5></h5>
-        <ul>
-          <li>
-            
-          </li>
-        </ul>
+      <div class="biselado">
+        <h3>Whitney Iorillo</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-3792-4516</p>
+          <p><b>Puntaje: </b> 5 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
       </div>
-
+      <div class="biselado">
+        <h3>Wilfred Balharry</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-4527-0026</p>
+          <p><b>Puntaje: </b> 1 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Elsa Klazenga</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-3016-1234</p>
+          <p><b>Puntaje: </b> 4 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Bernardo Scadding</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-2617-0205</p>
+          <p><b>Puntaje: </b> 4 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Beulah Speaks</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-1695-9781</p>
+          <p><b>Puntaje: </b> 5 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Lorette Boarleyson</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-3001-6500</p>
+          <p><b>Puntaje: </b> 4 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Ailee Taynton</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-2345-0336</p>
+          <p><b>Puntaje: </b> 3 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Orland Orkney</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-1258-0140</p>
+          <p><b>Puntaje: </b> 1 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Edith Robatham</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-4895-1200</p>
+          <p><b>Puntaje: </b> 4 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Jorie O'Kane</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-2958-1645</p>
+          <p><b>Puntaje: </b> 1 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Dietrich Ronca</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-3765-0121</p>
+          <p><b>Puntaje: </b> 1 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Vitoria Ciani</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-5465-3781</p>
+          <p><b>Puntaje: </b> 2 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Elssworth Immins</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-3167-9461</p>
+          <p><b>Puntaje: </b> 3 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Jacki Bucksey</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-6584-1690</p>
+          <p><b>Puntaje: </b> 3 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Giselbert Maytom</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-2016-3030</p>
+          <p><b>Puntaje: </b> 1 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Katerina Elcott</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-3624-8115</p>
+          <p><b>Puntaje: </b> 1 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Chester Treyer</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-3541-0303</p>
+          <p><b>Puntaje: </b> 2 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Tammy Pearman</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-6140-4510</p>
+          <p><b>Puntaje: </b> 1 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Torrance Boggon</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-3012-0123</p>
+          <p><b>Puntaje: </b> 5 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Ulrike Presnall</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-2461-9100</p>
+          <p><b>Puntaje: </b> 1 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Marys Roust</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-6215-2061</p>
+          <p><b>Puntaje: </b> 5 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Tuesday Le Marchand</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-6545-0000</p>
+          <p><b>Puntaje: </b> 5 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Randene Mutimer</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-2035-0456</p>
+          <p><b>Puntaje: </b> 4 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Granny Moyce</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-6712-2515</p>
+          <p><b>Puntaje: </b> 4 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Gypsy Tincey</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-5023-1732</p>
+          <p><b>Puntaje: </b> 5 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Roana Twyford</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-4013-0516</p>
+          <p><b>Puntaje: </b> 2 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Marley Spincks</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-2542-1619</p>
+          <p><b>Puntaje: </b> 3 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Logan Bellis</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-2113-8005</p>
+          <p><b>Puntaje: </b> 2 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Valery Moat</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <p><b>Contacto:</b> 11-5162-4023</p>
+          <p><b>Puntaje: </b> 5 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+        </div>
+      </div>
+      <div class="biselado">
+        <h3>Dill Ennew</h3>
+        <div class="lista">
+          <p>Datos</p>
+          <div class="orden">
+            <div>
+              <p><b>Contacto:</b> 11-6316-8089</p>
+              <p><b>Puntaje: </b> 4 de 5 <img src="../img/mascotas.png" alt="patas" id="patas" width="25px"/></p>
+            </div>
+            <div class="barrios">
+              <p><b>Barrios: </b>poner los barrios</p>
+            </div>  
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="registro">
+      <a href="form-adiestrador.html" target="_blank">Si querés publicar hacé click acá</a>
     </div>
   </main>
   <footer>
     <div class="datos">
-      <p>dirección</p>
-      <p>barrio</p>
-      <p>mapa google</p>
+      <h3>Contactanos</h3>
+      <p>Lavalle 1334 - CABA</p>
+      <p><i>consultas@iacan.com</i></p>
     </div>
     <div class="links">
       <a href="../adiestramiento_canino.pdf" download>Plan de Estudios</a>
       <a href="adiestradores.html">Adiestradores</a>
       <a href="contacto.html" target="_blank">Contacto</a>
     </div>
-    <div class="redes">
+    <div class="red">
       <h4>Nuestras Redes Sociales</h4>
-      <a href="#"><img src="../img/whatsapp.png" alt="whatsapp"></a>
-      <a href="#"><img src="../img/facebook.png" alt="facebook"></a>
-      <a href="#"><img src="../img/instagram.png" alt="instagram"></a>
-      <a href="#"><img src="../img/twitter.png" alt="twitter"></a>
+      <div>
+        <a href="#"><img src="../img/whatsapp.png" alt="whatsapp"></a>
+        <a href="#"><img src="../img/facebook.png" alt="facebook"></a>
+        <a href="#"><img src="../img/instagram.png" alt="instagram"></a>
+        <a href="#"><img src="../img/twitter.png" alt="twitter"></a>
+      </div>
     </div>
   </footer>
 </body>
