--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -51,21 +51,23 @@
     </main>
     <footer>
         <div class="datos">
-          <p>dirección</p>
-          <p>barrio</p>
-          <p>mapa google</p>
+            <h3>Contactanos</h3>
+            <p>Lavalle 1334 - CABA</p>
+            <p><i>consultas@iacan.com</i></p>
         </div>
         <div class="links">
-          <a href="../adiestramiento_canino.pdf" download>Plan de Estudios</a>
-          <a href="adiestradores.html">Adiestradores</a>
-          <a href="contacto.html" target="_blank">Contacto</a>
+            <a href="../adiestramiento_canino.pdf" download>Plan de Estudios</a>
+            <a href="adiestradores.html">Adiestradores</a>
+            <a href="contacto.html" target="_blank">Contacto</a>
         </div>
-        <div class="redes">
-          <h4>Nuestras Redes Sociales</h4>
-          <a href="#"><img src="../img/whatsapp.png" alt="whatsapp"></a>
-          <a href="#"><img src="../img/facebook.png" alt="facebook"></a>
-          <a href="#"><img src="../img/instagram.png" alt="instagram"></a>
-          <a href="#"><img src="../img/twitter.png" alt="twitter"></a>
+        <div class="red">
+            <h4>Nuestras Redes Sociales</h4>
+            <div>
+                <a href="#"><img src="../img/whatsapp.png" alt="whatsapp"></a>
+                <a href="#"><img src="../img/facebook.png" alt="facebook"></a>
+                <a href="#"><img src="../img/instagram.png" alt="instagram"></a>
+                <a href="#"><img src="../img/twitter.png" alt="twitter"></a>
+            </div>
         </div>
       </footer>
 </body>
